fix broken css

--- a/css/style.scss
+++ b/css/style.scss
@@ -755,6 +755,7 @@ label{
 .infrastructure{
 	position: relative;
 	height: 100vh;
+	overflow: hidden;
 	.infra-contain{
 		position: absolute;
 		@include translate(0,-50%);
